--- a/building.html
+++ b/building.html
@@ -204,9 +204,7 @@
               >
                 <h1 class="mb-3">Building Property</h1>
                 <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit diam justo sed
-                  rebum.
+                  Here Are some Building Flats Which are under our Services.
                 </p>
               </div>
             </div>
@@ -252,7 +250,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-1.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Building/b1.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -266,26 +267,26 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹2,05,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Lodha A wing [23rd Floor]</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Lokhandwala, Kandivali (East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
-                      >
+                        >950 Sqft + Balcony
+                      </small>
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
-                      >
+                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed
+                      </small>
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>3
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -297,7 +298,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-2.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Building/b2.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -311,26 +315,26 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹5,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Raheja Township [30th Floor + Fully Furnitured]</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >A.k Vaidya Marg, Malad(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1100 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>4 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>4
+                        Bath+washroom</small
                       >
                     </div>
                   </div>
@@ -342,7 +346,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-3.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Building/b3.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -356,26 +363,26 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹1,80,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Raheja Township [30th Floor + Fully Furnitured]</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Near Times Of India, Malad(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1500 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -387,7 +394,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-4.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Building/b4.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -401,13 +411,13 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹1,05,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Omkar Alta Monte [28th Floor + Balcony View]</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >W.Exp Highway , Malad(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
@@ -416,11 +426,11 @@
                         >1000 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>4 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>4
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -432,7 +442,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-5.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Building/b5.jpeg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -446,26 +459,26 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹1,00,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Godrej heights [12th Floor With Furniture]</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Lokhandvala, Kandvali(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1200 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -477,7 +490,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-6.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Building/b6.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -491,26 +507,26 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹59,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Royal Pristo (18th Floor)</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Kurar Village, Malad(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >850 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -1088,19 +1104,17 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Quick Links</h5>
-              <a class="btn btn-link text-white-50" href="about.html"
-                >About Us</a
-              >
+              <a class="btn btn-link text-white-50" href="about.html">About Us</a>
               <a class="btn btn-link text-white-50" href="contact.html"
                 >Contact Us</a
               >
               <a class="btn btn-link text-white-50" href="ourServices.html"
                 >Our Services</a
               >
-              <a class="btn btn-link text-white-50" href="privacy&policy.html"
+              <a class="btn btn-link text-white-50" href="/privacy&policy.html"
                 >Privacy Policy</a
               >
-              <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+              <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
                 >Terms & Condition</a
               >
             </div>
