--- a/office.html
+++ b/office.html
@@ -203,11 +203,7 @@
                 data-wow-delay="0.1s"
               >
                 <h1 class="mb-3">Office Property</h1>
-                <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit diam justo sed
-                  rebum.
-                </p>
+                <p>Here are Some Office's Which Comes Under our Services</p>
               </div>
             </div>
             <div
@@ -252,52 +248,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-1.jpg" alt=""
-                      /></a>
-                      <div
-                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
-                      >
-                        For Sell
-                      </div>
-                      <div
-                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
-                      >
-                        Office
-                      </div>
-                    </div>
-                    <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
-                      <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
-                      </p>
-                    </div>
-                    <div class="d-flex border-top">
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
-                      >
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
-                      >
-                      <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-lg-4 col-md-6 wow fadeInUp"
-                  data-wow-delay="0.3s"
-                >
-                  <div class="property-item rounded overflow-hidden">
-                    <div class="position-relative overflow-hidden">
-                      <a href=""
-                        ><img class="img-fluid" src="img/property-2.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Office/o1.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -311,27 +265,76 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹5,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Office Space For Call Centre (With Furniture)</a
                       >
                       <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i>
+                        Phoneix Centre H1, NR.Inorbit mall,Malad(West)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >500 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Big area +
+                        4 Cabins</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i> 2 Huge
+                        Washroom
+                      </small>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-4 col-md-6 wow fadeInUp"
+                  data-wow-delay="0.3s"
+                >
+                  <div class="property-item rounded overflow-hidden">
+                    <div class="position-relative overflow-hidden">
+                      <a href=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Office/o2.jpg"
+                          alt=""
+                      /></a>
+                      <div
+                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
                       >
+                        For Rent
+                      </div>
+                      <div
+                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
+                      >
+                        Office
+                      </div>
+                    </div>
+                    <div class="p-4 pb-0">
+                      <h5 class="text-primary mb-3">₹3,50,000</h5>
+                      <a class="d-block h5 mb-2" href=""
+                        >Call Centre/service Desk/IT dept</a
+                      >
+                      <p>
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i
+                        >Palledium Complex, Malad (east)
+                      </p>
+                    </div>
+                    <div class="d-flex border-top">
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-ruler-combined text-primary me-2"></i
+                        >800Sqft with Furniture</small
+                      >
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Common
+                        area + 2 Cabins</small
+                      >
+                      <small class="flex-fill text-center py-2"
+                        ><i class="fa fa-bath text-primary me-2"></i>2 Washroom
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -342,7 +345,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-3.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Office/o3.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -356,26 +362,27 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹95,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Consultancy/Library/desk</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Surbhi APT, Malad station (east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >600 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i> 1 main + 2
+                        Cabins</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Washrooms</small
                       >
                     </div>
                   </div>
@@ -387,7 +394,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-4.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Office/o4.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -401,25 +411,24 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹15,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Huge Showroom</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Astha Complex, W.exp Highway Malad (east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1500Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>6
+                        Cabins</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
+                        ><i class="fa fa-bath text-primary me-2"></i>4
                         Bath</small
                       >
                     </div>
@@ -432,52 +441,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-5.jpg" alt=""
-                      /></a>
-                      <div
-                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
-                      >
-                        For Sell
-                      </div>
-                      <div
-                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
-                      >
-                        Office
-                      </div>
-                    </div>
-                    <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
-                      <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
-                      </p>
-                    </div>
-                    <div class="d-flex border-top">
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
-                      >
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
-                      >
-                      <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-lg-4 col-md-6 wow fadeInUp"
-                  data-wow-delay="0.5s"
-                >
-                  <div class="property-item rounded overflow-hidden">
-                    <div class="position-relative overflow-hidden">
-                      <a href=""
-                        ><img class="img-fluid" src="img/property-6.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Office/o5.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -491,27 +458,74 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹20,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Top Floor Office </a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Shree Complex, Nr.Mauli cables, Malad(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >2000 Sqft With Furniture</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Large
+                        Space + 4 Cabins</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>3
+                        Washrooms</small
                       >
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-4 col-md-6 wow fadeInUp"
+                  data-wow-delay="0.5s"
+                >
+                  <div class="property-item rounded overflow-hidden">
+                    <div class="position-relative overflow-hidden">
+                      <a href=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Office/o6.jpg"
+                          alt=""
+                      /></a>
+                      <div
+                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
+                      >
+                        For Rent
+                      </div>
+                      <div
+                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
+                      >
+                        Office
+                      </div>
+                    </div>
+                    <div class="p-4 pb-0">
+                      <h5 class="text-primary mb-3">₹25,00,00</h5>
+                      <a class="d-block h5 mb-2" href=""
+                        >Service Executive/ Call Centre</a
+                      >
+                      <p>
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i>
+                        5d SV Road, Malad(West)
+                      </p>
+                    </div>
+                    <div class="d-flex border-top">
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-ruler-combined text-primary me-2"></i
+                        >3000 Sqft</small
+                      >
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Large
+                        Space + 6 Cabins</small
+                      >
+                      <small class="flex-fill text-center py-2"
+                        ><i class="fa fa-bath text-primary me-2"></i>4 Washrooms
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -1088,19 +1102,17 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Quick Links</h5>
-              <a class="btn btn-link text-white-50" href="about.html"
-                >About Us</a
-              >
+              <a class="btn btn-link text-white-50" href="about.html">About Us</a>
               <a class="btn btn-link text-white-50" href="contact.html"
                 >Contact Us</a
               >
               <a class="btn btn-link text-white-50" href="ourServices.html"
                 >Our Services</a
               >
-              <a class="btn btn-link text-white-50" href="privacy&policy.html"
+              <a class="btn btn-link text-white-50" href="/privacy&policy.html"
                 >Privacy Policy</a
               >
-              <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+              <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
                 >Terms & Condition</a
               >
             </div>
