--- a/property-agent.html
+++ b/property-agent.html
@@ -108,7 +108,7 @@
                 <div class="row g-2">
                     <div class="col-md-10">
                         <div class="row g-2">
-                            <div class="col-md-4">
+                            <!-- <div class="col-md-4">
                                 <input type="text" class="form-control border-0 py-3" placeholder="Search Keyword">
                             </div>
                             <div class="col-md-4">
@@ -126,12 +126,12 @@
                                     <option value="2">Location 2</option>
                                     <option value="3">Location 3</option>
                                 </select>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <!-- <div class="col-md-2">
                         <button class="btn btn-dark border-0 w-100 py-3">Search</button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -148,9 +148,7 @@
               >
                 <h1 class="mb-3">Property Agents</h1>
                 <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed
-                  rebum vero dolor duo.
+                Our property agents are the heart of our operations. With a wealth of experience, in-depth market knowledge, and a genuine passion for real estate, our agents are dedicated to helping you find your perfect property. Whether you're buying, selling, or investing, our team is here to guide you every step of the way, ensuring a seamless and successful real estate journey.
                 </p>
               </div>
               <div class="row g-4">
@@ -233,7 +231,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                   <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                      <img class="img-fluid" src="img/team-4.jpg" alt="" />
+                      <img class="img-fluid" src="Propertyimgs/People IMgs/p4 (2)a.jpg" alt="" />
                       <div
                         class="position-absolute start-50 top-100 translate-middle d-flex align-items-center"
                       >
@@ -249,15 +247,16 @@
                       </div>
                     </div>
                     <div class="text-center p-4 mt-3">
-                      <h5 class="fw-bold mb-0">Full Name</h5>
-                      <small>Designation</small>
+                      <h5 class="fw-bold mb-0">Raj Khurana</h5>
+                      <small>Marketing Manager</small>  <br>
+                      <small>5+ Years Experience</small>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                   <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                      <img class="img-fluid" src="img/team-4.jpg" alt="" />
+                      <img class="img-fluid" src="Propertyimgs/People IMgs/pppp1.jpg" alt="" />
                       <div
                         class="position-absolute start-50 top-100 translate-middle d-flex align-items-center"
                       >
@@ -273,15 +272,16 @@
                       </div>
                     </div>
                     <div class="text-center p-4 mt-3">
-                      <h5 class="fw-bold mb-0">Full Name</h5>
-                      <small>Designation</small>
+                      <h5 class="fw-bold mb-0">Adom Rodriques</h5>
+                      <small>Relocation Specialist</small>  <br>
+                      <small>5+ Years Experience</small>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                   <div class="team-item rounded overflow-hidden">
                     <div class="position-relative">
-                      <img class="img-fluid" src="img/team-4.jpg" alt="" />
+                      <img class="img-fluid" src="Propertyimgs/People IMgs/pfff1.jpg" alt="" />
                       <div
                         class="position-absolute start-50 top-100 translate-middle d-flex align-items-center"
                       >
@@ -297,8 +297,8 @@
                       </div>
                     </div>
                     <div class="text-center p-4 mt-3">
-                      <h5 class="fw-bold mb-0">Full Name</h5>
-                      <small>Designation</small>
+                      <h5 class="fw-bold mb-0">Harsh Mehta</h5>
+                      <small>Leadership (CEO+CFO)</small>
                     </div>
                   </div>
                 </div>
@@ -352,12 +352,20 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Quick Links</h5>
-                        <a class="btn btn-link text-white-50" href="about.html">About Us</a>
-                        <a class="btn btn-link text-white-50" href="contact.html">Contact Us</a>
-                        <a class="btn btn-link text-white-50" href="ourServices.html">Our Services</a>
-                        <a class="btn btn-link text-white-50" href="privacy&policy.html">Privacy Policy</a>
-                        <a class="btn btn-link text-white-50" href="Terms&Condition.html">Terms & Condition</a>
+                      <h5 class="text-white mb-4">Quick Links</h5>
+                      <a class="btn btn-link text-white-50" href="about.html">About Us</a>
+                      <a class="btn btn-link text-white-50" href="contact.html"
+                        >Contact Us</a
+                      >
+                      <a class="btn btn-link text-white-50" href="ourServices.html"
+                        >Our Services</a
+                      >
+                      <a class="btn btn-link text-white-50" href="/privacy&policy.html"
+                        >Privacy Policy</a
+                      >
+                      <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
+                        >Terms & Condition</a
+                      >
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Photo Gallery</h5>
