--- a/Terms&Condition.html
+++ b/Terms&Condition.html
@@ -392,19 +392,17 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <h5 class="text-white mb-4">Quick Links</h5>
-          <a class="btn btn-link text-white-50" href="about.html"
-            >About Us</a
-          >
+          <a class="btn btn-link text-white-50" href="about.html">About Us</a>
           <a class="btn btn-link text-white-50" href="contact.html"
             >Contact Us</a
           >
           <a class="btn btn-link text-white-50" href="ourServices.html"
             >Our Services</a
           >
-          <a class="btn btn-link text-white-50" href="privacy&policy.html"
+          <a class="btn btn-link text-white-50" href="/privacy&policy.html"
             >Privacy Policy</a
           >
-          <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+          <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
             >Terms & Condition</a
           >
         </div>
