--- a/addProperty.html
+++ b/addProperty.html
@@ -224,7 +224,7 @@
                       <!-- Title Input -->
                       <div class="col-md-6 col-sm-12">
                           <div class="input-group mb-3">
-                              <span class="input-group-text" id="inputGroup-sizing-default">Title</span>
+                              <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
                               <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" id="${titleId}">
                           </div>
                       </div>
@@ -255,8 +255,11 @@
                               <label class="input-group-text" for="${propertyId}">Property Type</label>
                               <select class="form-select" id="${propertyId}">
                                   <option selected>Select Type</option>
+                                  <option value="Apartment">Apartment</option>
                                   <option value="Villa">Villa</option>
+                                  <option value="Office">Office</option>
                                   <option value="Building">Building</option>
+                                  <option value="Townhouse">Townhouse</option>
                                   <option value="Shop">Shop</option>
                               </select>
                           </div>
@@ -266,7 +269,7 @@
                       <div class="col-md-6 col-sm-12">
                           <div class="form-floating mb-3">
                               <textarea class="form-control" placeholder="Leave a description here" id="${bodyId}" name="body"></textarea>
-                              <label for="${bodyId}">Description</label>
+                              <label for="${bodyId}">Location</label>
                           </div>
                       </div>
   
