--- a/apartment.html
+++ b/apartment.html
@@ -360,7 +360,7 @@
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1800 Sqft</small
+                        >1800 Sqft+Pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-bed text-primary me-2"></i> 5
@@ -368,7 +368,7 @@
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>4
-                        Bath+washroom++Pool</small
+                        Bath+washroom</small
                       >
                     </div>
                   </div>
@@ -394,26 +394,24 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹15,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Galaxy Aparment</a>
                       <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i>
+                        Marve, Malad (East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1500 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>5 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>5
+                        Bath+washroom</small
                       >
                     </div>
                   </div>
@@ -440,25 +438,24 @@
                     </div>
                     <div class="p-4 pb-0">
                       <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <a class="d-block h5 mb-2" href="">Happy Home</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >5.No Aarey Colony, Goregaon(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >800 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed +
+                        common room</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -486,24 +483,24 @@
                     <div class="p-4 pb-0">
                       <h5 class="text-primary mb-3">₹12,345</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Grand House Apartment</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Manori Island, Gorai
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1200 Sqft + Pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>4 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>4
+                        Bath+washroom</small
                       >
                     </div>
                   </div>
@@ -1081,19 +1078,17 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Quick Links</h5>
-              <a class="btn btn-link text-white-50" href="about.html"
-                >About Us</a
-              >
+              <a class="btn btn-link text-white-50" href="about.html">About Us</a>
               <a class="btn btn-link text-white-50" href="contact.html"
                 >Contact Us</a
               >
               <a class="btn btn-link text-white-50" href="ourServices.html"
                 >Our Services</a
               >
-              <a class="btn btn-link text-white-50" href="privacy&policy.html"
+              <a class="btn btn-link text-white-50" href="/privacy&policy.html"
                 >Privacy Policy</a
               >
-              <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+              <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
                 >Terms & Condition</a
               >
             </div>
