--- a/property-type.html
+++ b/property-type.html
@@ -263,14 +263,22 @@
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Quick Links</h5>
                         <a class="btn btn-link text-white-50" href="about.html">About Us</a>
-                        <a class="btn btn-link text-white-50" href="contact.html">Contact Us</a>
-                        <a class="btn btn-link text-white-50" href="ourServices.html">Our Services</a>
-                        <a class="btn btn-link text-white-50" href="privacy&policy.html">Privacy Policy</a>
-                        <a class="btn btn-link text-white-50" href="Terms&Condition.html">Terms & Condition</a>
-                    </div>
+                        <a class="btn btn-link text-white-50" href="contact.html"
+                          >Contact Us</a
+                        >
+                        <a class="btn btn-link text-white-50" href="ourServices.html"
+                          >Our Services</a
+                        >
+                        <a class="btn btn-link text-white-50" href="/privacy&policy.html"
+                          >Privacy Policy</a
+                        >
+                        <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
+                          >Terms & Condition</a
+                        >
+                      </div>
                     <div class="col-lg-4 col-md-6">
                         <h5 class="text-white mb-4">Photo Gallery</h5>
                         <div class="row g-2 pt-2">
