--- a/shop.html
+++ b/shop.html
@@ -203,11 +203,7 @@
                 data-wow-delay="0.1s"
               >
                 <h1 class="mb-3">Shop Property</h1>
-                <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit diam justo sed
-                  rebum.
-                </p>
+                <p>Here are Some Shop's Which Comes Under our Services</p>
               </div>
             </div>
             <div
@@ -252,52 +248,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-1.jpg" alt=""
-                      /></a>
-                      <div
-                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
-                      >
-                        For Sell
-                      </div>
-                      <div
-                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
-                      >
-                        Shop
-                      </div>
-                    </div>
-                    <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
-                      <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
-                      </p>
-                    </div>
-                    <div class="d-flex border-top">
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
-                      >
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
-                      >
-                      <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-lg-4 col-md-6 wow fadeInUp"
-                  data-wow-delay="0.3s"
-                >
-                  <div class="property-item rounded overflow-hidden">
-                    <div class="position-relative overflow-hidden">
-                      <a href=""
-                        ><img class="img-fluid" src="img/property-2.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Shops/s1 (2).jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -311,27 +265,76 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹25,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                        >Any Big Brand Shop/outlet
+                      </a>
                       <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i>
+                        Ground Floor,Inorbit Mall, Malad(West)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >2000 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i> 6 Cabin
+                        Space</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>2 Storage
+                        Room
+                      </small>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-4 col-md-6 wow fadeInUp"
+                  data-wow-delay="0.3s"
+                >
+                  <div class="property-item rounded overflow-hidden">
+                    <div class="position-relative overflow-hidden">
+                      <a href=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Shops/s2.jpg"
+                          alt=""
+                      /></a>
+                      <div
+                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
                       >
+                        For Rent
+                      </div>
+                      <div
+                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
+                      >
+                        Shop
+                      </div>
+                    </div>
+                    <div class="p-4 pb-0">
+                      <h5 class="text-primary mb-3">₹2,50,000</h5>
+                      <a class="d-block h5 mb-2" href=""
+                        >Grocery/Cafe/Restaurant</a
+                      >
+                      <p>
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i
+                        >Near Malad Station East
+                      </p>
+                    </div>
+                    <div class="d-flex border-top">
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-ruler-combined text-primary me-2"></i
+                        >800 Sqft</small
+                      >
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-bed text-primary me-2"></i>With
+                        Furniture</small
+                      >
+                      <small class="flex-fill text-center py-2"
+                        ><i class="fa fa-bath text-primary me-2"></i>2 Washrooms
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -342,7 +345,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-3.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Shops/s3.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -356,26 +362,27 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹60,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Library/Game Zone/Etc</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Shraddha Complex, Subhas Lane, Malad(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >875 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>1 large
+                        Area</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Washroom</small
                       >
                     </div>
                   </div>
@@ -387,7 +394,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-4.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Shops/s4.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -401,27 +411,28 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹60,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Boutique/Parlour/Medical</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Ramesh Chowk, Malad (east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >800 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Storage
+                        capacity</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
+                        ><i class="fa fa-bath text-primary me-2"></i> 2
+                        Washrooms
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -432,7 +443,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-5.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Shops/s5.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -446,27 +460,27 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹35,00,000</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >Tatoo Parlour With Furniture & Equipments</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Gold Garden, Malad(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >950 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>1 storage
+                        room</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
+                        ><i class="fa fa-bath text-primary me-2"></i>2 washrooms
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -477,7 +491,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-6.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Shops/s6.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -491,27 +508,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹1,50,000</h5>
+                      <a class="d-block h5 mb-2" href="">Gift Shops</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Gold Garden, Malad(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >875 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>No Storage
+                        Room</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
+                        ><i class="fa fa-bath text-primary me-2"></i>1 Washroom
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -1088,19 +1103,17 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Quick Links</h5>
-              <a class="btn btn-link text-white-50" href="about.html"
-                >About Us</a
-              >
+              <a class="btn btn-link text-white-50" href="about.html">About Us</a>
               <a class="btn btn-link text-white-50" href="contact.html"
                 >Contact Us</a
               >
               <a class="btn btn-link text-white-50" href="ourServices.html"
                 >Our Services</a
               >
-              <a class="btn btn-link text-white-50" href="privacy&policy.html"
+              <a class="btn btn-link text-white-50" href="/privacy&policy.html"
                 >Privacy Policy</a
               >
-              <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+              <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
                 >Terms & Condition</a
               >
             </div>
