--- a/testimonial.html
+++ b/testimonial.html
@@ -286,12 +286,20 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Quick Links</h5>
-                        <a class="btn btn-link text-white-50" href="">About Us</a>
-                        <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                        <a class="btn btn-link text-white-50" href="">Our Services</a>
-                        <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                        <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
-                    </div>
+                        <a class="btn btn-link text-white-50" href="about.html">About Us</a>
+                        <a class="btn btn-link text-white-50" href="contact.html"
+                          >Contact Us</a
+                        >
+                        <a class="btn btn-link text-white-50" href="ourServices.html"
+                          >Our Services</a
+                        >
+                        <a class="btn btn-link text-white-50" href="/privacy&policy.html"
+                          >Privacy Policy</a
+                        >
+                        <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
+                          >Terms & Condition</a
+                        >
+                      </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Photo Gallery</h5>
                         <div class="row g-2 pt-2">
