--- a/townhouse.html
+++ b/townhouse.html
@@ -203,11 +203,7 @@
                 data-wow-delay="0.1s"
               >
                 <h1 class="mb-3">Townhouse Property</h1>
-                <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit diam justo sed
-                  rebum.
-                </p>
+                <p>Here Are some Townhouses Which are under our Services.</p>
               </div>
             </div>
             <div
@@ -252,7 +248,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-1.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Townhouse/t1.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -266,26 +265,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹95,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Block NO.2</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Gorai Beach Resort
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >550 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 bunk Bed
+                        in 1</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -297,7 +295,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-2.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Townhouse/t2.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -311,26 +312,24 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹25,000</h5>
+                      <a class="d-block h5 mb-2" href="">Ganga APT</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Kurar Village Malad(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >300 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>1
+                        Bath+Wahroom</small
                       >
                     </div>
                   </div>
@@ -342,7 +341,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-3.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Townhouse/t3.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -356,26 +358,24 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹80,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Happy Township</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Times of India, Malad (east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >500 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>2 Bath=
+                        Washroom</small
                       >
                     </div>
                   </div>
@@ -387,7 +387,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-4.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Townhouse/t4.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -401,22 +404,20 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹35,000</h5>
+                      <a class="d-block h5 mb-2" href="">Colours Townships</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Aarey Colony, Goregaon(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >800 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
@@ -432,7 +433,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-5.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Townhouse/t5.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -446,13 +450,11 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹45,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Urban Township</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Parekh Nagar Goregaon(EAst)
                       </p>
                     </div>
                     <div class="d-flex border-top">
@@ -461,7 +463,7 @@
                         >1000 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
@@ -477,7 +479,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-6.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="Propertyimgs/Townhouse/t6.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -492,18 +497,16 @@
                     </div>
                     <div class="p-4 pb-0">
                       <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <a class="d-block h5 mb-2" href="">Silver Township</a>
                       <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i>SV
+                        Road Malad(West)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >850 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
@@ -1088,19 +1091,17 @@
             </div>
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Quick Links</h5>
-              <a class="btn btn-link text-white-50" href="about.html"
-                >About Us</a
-              >
+              <a class="btn btn-link text-white-50" href="about.html">About Us</a>
               <a class="btn btn-link text-white-50" href="contact.html"
                 >Contact Us</a
               >
               <a class="btn btn-link text-white-50" href="ourServices.html"
                 >Our Services</a
               >
-              <a class="btn btn-link text-white-50" href="privacy&policy.html"
+              <a class="btn btn-link text-white-50" href="/privacy&policy.html"
                 >Privacy Policy</a
               >
-              <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+              <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
                 >Terms & Condition</a
               >
             </div>
