--- a/villaProperty.html
+++ b/villaProperty.html
@@ -203,11 +203,7 @@
                 data-wow-delay="0.1s"
               >
                 <h1 class="mb-3">Villa Property</h1>
-                <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit diam justo sed
-                  rebum.
-                </p>
+                <p>Here are Some Villa's Which Comes Under our Services</p>
               </div>
             </div>
             <div
@@ -253,52 +249,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-1.jpg" alt=""
-                      /></a>
-                      <div
-                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
-                      >
-                        For Sell
-                      </div>
-                      <div
-                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
-                      >
-                        Villa
-                      </div>
-                    </div>
-                    <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
-                      <p>
-                        <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
-                      </p>
-                    </div>
-                    <div class="d-flex border-top">
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
-                      >
-                      <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
-                      >
-                      <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
-                    </div>
-                  </div>
-                </div>
-                <div
-                  class="col-lg-4 col-md-6 wow fadeInUp"
-                  data-wow-delay="0.3s"
-                >
-                  <div class="property-item rounded overflow-hidden">
-                    <div class="position-relative overflow-hidden">
-                      <a href=""
-                        ><img class="img-fluid" src="img/property-2.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="/Propertyimgs/villas/v1.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -312,26 +266,72 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹35,000 (Per day)</h5>
+                      <a class="d-block h5 mb-2" href="">Suvi's Villa</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Gorai Near Chruch
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >800 Sqft+Pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed with
+                        Balcony</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+washroom+1 common</small
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-4 col-md-6 wow fadeInUp"
+                  data-wow-delay="0.3s"
+                >
+                  <div class="property-item rounded overflow-hidden">
+                    <div class="position-relative overflow-hidden">
+                      <a href=""
+                        ><img
+                          class="img-fluid"
+                          src="/Propertyimgs/villas/v2.jpg"
+                          alt=""
+                      /></a>
+                      <div
+                        class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
+                      >
+                        For Rent
+                      </div>
+                      <div
+                        class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3"
+                      >
+                        Villa
+                      </div>
+                    </div>
+                    <div class="p-4 pb-0">
+                      <h5 class="text-primary mb-3">₹2,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Grand Villa</a>
+                      <p>
+                        <i class="fa fa-map-marker-alt text-primary me-2"></i
+                        >Nr.Aksha Beach Marve, Malad(west)
+                      </p>
+                    </div>
+                    <div class="d-flex border-top">
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-ruler-combined text-primary me-2"></i
+                        >800 Sqft + Pool</small
+                      >
+                      <small class="flex-fill text-center border-end py-2"
+                        ><i class="fa fa-bed text-primary me-2"></i>1 Bed +
+                        Common Hall</small
+                      >
+                      <small class="flex-fill text-center py-2"
+                        ><i class="fa fa-bath text-primary me-2"></i>2
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -343,7 +343,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-3.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="/Propertyimgs/villas/v3.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -357,26 +360,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹80,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Sea View Villa</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Manori Beach, Gorai.
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >800 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2 Bed + pvt
+                        beach</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -388,7 +390,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-4.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="/Propertyimgs/villas/v4.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -402,26 +407,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹20,000(Per day)</h5>
+                      <a class="d-block h5 mb-2" href="">White House</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Royal Palm Villa no:15, Aarey Colony
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >600 Sqft+Pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>2Bed
+                        +1Common Hall</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -433,7 +437,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-5.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="/Propertyimgs/villas/v5.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -447,26 +454,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹1,00,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Tiger Villa</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Aarey Colony 3, Goregaon(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >5000Sqft +4 divided pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>5 Bed +
+                        Garden</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>5
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -478,7 +484,10 @@
                   <div class="property-item rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                       <a href=""
-                        ><img class="img-fluid" src="img/property-6.jpg" alt=""
+                        ><img
+                          class="img-fluid"
+                          src="/Propertyimgs/villas/v6.jpg"
+                          alt=""
                       /></a>
                       <div
                         class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3"
@@ -493,25 +502,24 @@
                     </div>
                     <div class="p-4 pb-0">
                       <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <a class="d-block h5 mb-2" href="">Golden Urban </a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Gorai, borivali.
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1100 Sqft + Pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>3 large
+                        Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>3
+                        Bath+Washroom</small
                       >
                     </div>
                   </div>
@@ -1098,10 +1106,10 @@
               <a class="btn btn-link text-white-50" href="ourServices.html"
                 >Our Services</a
               >
-              <a class="btn btn-link text-white-50" href="privacy&policy.html"
+              <a class="btn btn-link text-white-50" href="/privacy&policy.html"
                 >Privacy Policy</a
               >
-              <a class="btn btn-link text-white-50" href="Terms&Condition.html"
+              <a class="btn btn-link text-white-50" href="/Terms&Condition.html"
                 >Terms & Condition</a
               >
             </div>
